# internal/httpserver/router.go
@@ -151,6 +151,10 @@ func NewRouter(d Deps) http.Handler {
 			r.Post("/clients/{clientID}/activate", adminH.ActivateClient)
 			r.Delete("/clients/{clientID}", adminH.DeleteClient)
 			r.Post("/clients/{clientID}/owner/password", adminH.ResetOwnerPassword)
+			r.Post("/clients/{clientID}/users", adminH.CreateClientUser)
+			r.Post("/clients/{clientID}/users/{userID}/password", adminH.ResetClientUserPassword)
+			r.Post("/clients/{clientID}/users/{userID}/disable", adminH.DisableClientUser)
+			r.Post("/clients/{clientID}/users/{userID}/enable", adminH.EnableClientUser)
 			r.Get("/numbers", adminH.ListNumbers)
 			r.Post("/numbers/upload", adminH.UploadNumbers)
 			r.Post("/numbers/sync", adminH.SyncNumbers)
